# cube-timer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ideas.md
.github/workflows/: build.yaml
src/: CMakeLists.txt  Data.cpp  Data.hpp  Duration.cpp  Duration.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow2.cpp  MainWindow2.hpp  PbWidget.cpp  PbWidget.hpp  Scramble.cpp  Scramble.hpp  Settings.cpp  Settings.hpp  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.hpp  TimesList.cpp  TimesList.hpp  icon.icns  main.cpp  rapidcsv.h  test.csv
src/data/: default-historic.csv  default-settings.csv  default.csv  settings.csv
src/libs/: rapidcsv.h
test/: CMakeLists.txt  durationUnitTest.cpp  recomputeCSV.cpp  scrambleUnitTest.cpp  test.csv  test2.csv  test_divers.cpp
